// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableCell /> ref should work 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

<td
  class="poodle-box c0 poodle-table-cell c1 c2"
>
  TableCell
</td>
`;

exports[`<TableCell /> should render Box props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.c2 {
  margin-top: 20px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box c0 poodle-table-cell c1 c2"
        id="id"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> should render TableCell correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box c0 poodle-table-cell c1 c2"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> should render with divider context correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  border-bottom: 1px solid;
  border-bottom-color: #CCCCCC;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box c0 poodle-table-cell c1 c2"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> should render with level head correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  border-bottom: 1px solid;
  border-bottom-color: #CCCCCC;
  font-weight: 700;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

<table>
  <thead>
    <tr>
      <th
        class="poodle-box c0 poodle-table-cell c1 c2"
      >
        TableCell
      </th>
    </tr>
  </thead>
</table>
`;

exports[`<TableCell /> size should render with size l correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c7 {
  padding-top: 24px;
  padding-bottom: 24px;
  padding-left: 16px;
  padding-right: 16px;
}

<div
  class="poodle-box c0 poodle-table c1 c2"
>
  <table
    class="poodle-box c0 poodle-table__table c4 c2"
  >
    <tbody>
      <tr>
        <td
          class="poodle-box c0 poodle-table-cell c7 c2"
        >
          TableCell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableCell /> size should render with size m correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c7 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

<div
  class="poodle-box c0 poodle-table c1 c2"
>
  <table
    class="poodle-box c0 poodle-table__table c4 c2"
  >
    <tbody>
      <tr>
        <td
          class="poodle-box c0 poodle-table-cell c7 c2"
        >
          TableCell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableCell /> size should render with size s correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c7 {
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

<div
  class="poodle-box c0 poodle-table c1 c2"
>
  <table
    class="poodle-box c0 poodle-table__table c4 c2"
  >
    <tbody>
      <tr>
        <td
          class="poodle-box c0 poodle-table-cell c7 c2"
        >
          TableCell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableCell /> theming should disable classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box c0 poodle-table-cell c1"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> theming should extend size styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c7 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  height: 100px;
}

<div
  class="poodle-box c0 poodle-table c1 c2"
>
  <table
    class="poodle-box c0 poodle-table__table c4 c2"
  >
    <tbody>
      <tr>
        <td
          class="poodle-box c0 poodle-table-cell c7 c2"
        >
          TableCell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableCell /> theming should extend size styles with mode 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c7 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  height: 100px;
  height: 110px;
}

<div
  class="poodle-box c0 poodle-table c1 c2"
>
  <table
    class="poodle-box c0 poodle-table__table c4 c2"
  >
    <tbody>
      <tr>
        <td
          class="poodle-box c0 poodle-table-cell c7 c2"
        >
          TableCell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableCell /> theming should extend styles in global 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box c0 poodle-table-cell c1 c2"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> theming should extend styles in local 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box c0 poodle-table-cell c1 c2"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> theming should override classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box c0 poodle-table-cell morning c1"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> theming should override styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 50px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box c0 poodle-table-cell c1 c2"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> theming should render with default props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box c0 poodle-table-cell c1 hello c2"
        id="id"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;
